--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cucumber-js --format summary --format progress"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
     "@cucumber/cucumber": "^12.3.0",
     "chai": "^6.2.1",
     "selenium-webdriver": "^4.39.0"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
